alterado titulo index

--- a/mvc/ExemploMVC02/ExemploMVC02/Views/Recrutadora/Index.cshtml
+++ b/mvc/ExemploMVC02/ExemploMVC02/Views/Recrutadora/Index.cshtml
@@ -2,6 +2,12 @@
     Layout = "~/Views/Shared/Master.cshtml";
 }
 
+<div class="row mt-3">
+    <div class="col-md-12">
+        <h5 class="text-primary text-center">Lista Recrutadora</h5>
+    </div>
+</div>
+
 
 @Html.ActionLink("Nova Recrutadora", "Cadastro", "Recrutadora", new { @class = "btn btn-primary float-right mr-2 mb-2 mt-2" })
 <div class="mr-3 ml-3">
